@@ -144,6 +144,7 @@ public final class Constants {
       public final static String DATE_KEYBOARD_INPUT = "date_keyboard_input";
       public final static String DATE_KEYBOARD_REVERSE = "date_keyboard_reverse";
       public final static String MESSAGE_DURATION = "message_duration";
+      public final static String COPY_BARCODE_NOTE = "copy_barcode_note";
     }
 
     public final static class SCANNER {
@@ -245,6 +246,7 @@ public final class Constants {
       public final static boolean DATE_KEYBOARD_INPUT = false;
       public final static boolean DATE_KEYBOARD_REVERSE = false;
       public final static int MESSAGE_DURATION = 10;
+      public final static boolean COPY_BARCODE_NOTE = false;
     }
 
     public final static class SCANNER {
