@@ -345,6 +345,36 @@
 
         </LinearLayout>
 
+        <LinearLayout
+          style="@style/Widget.Grocy.LinearLayout.ListItem.TwoLine.Clickable.More"
+          android:layout_width="match_parent"
+          android:layout_height="wrap_content"
+          android:onClick="@{v -> switchCopyBarcodeNote.setChecked(!switchCopyBarcodeNote.isChecked())}">
+
+          <ImageView
+            style="@style/Widget.Grocy.ImageView.ListItem.Icon"
+            tools:ignore="ContentDescription"
+            android:src="@drawable/ic_round_content_copy" />
+
+          <LinearLayout style="@style/Widget.Grocy.LinearLayout.ListItem.TextBox.Stretch">
+
+            <TextView
+              style="@style/Widget.Grocy.TextView.ListItem.Title"
+              android:text="@string/setting_copy_barcode_note" />
+
+            <TextView
+              style="@style/Widget.Grocy.TextView.ListItem.Description"
+              android:text="@string/setting_copy_barcode_note_description" />
+
+          </LinearLayout>
+
+          <com.google.android.material.materialswitch.MaterialSwitch
+            android:id="@+id/switch_copy_barcode_note"
+            style="@style/Widget.Grocy.Switch"
+            android:checked="@={viewModel.copyBarcodeNoteEnabled}" />
+
+        </LinearLayout>
+
       </LinearLayout>
 
 
